[Lambda][CodeBuild][SAM]Java 21
- Gradle 8.5 or later.
- Update packages to the latest.
  - Use BOM(Bill of Materials) if provided.